# patternCV

./: CMakeLists.txt  README.md  builder.sh
source/: DistrhoPluginInfo.h  euclideanGenerator.cpp  euclideanGenerator.hpp  generateNewPlugin.py  patternCV.cpp  patternCV.hpp  patternGenerator.cpp  patternGenerator.hpp
